@@ -132,18 +132,18 @@ public class SecretCodeViewImpl extends AbstractSceneView implements SecretCodeV
     }
 
     private void setUpLabels() {
-        this.labelGuessP1.setText(TEXT_LABEL_GUESS + this.playersNames.getFirst());
-        this.labelGuessP2.setText(TEXT_LABEL_GUESS + this.playersNames.getLast());
-        this.labelResultP1.setText(TEXT_LABEL_RESULTS + this.playersNames.getFirst());
-        this.labelResultP2.setText(TEXT_LABEL_RESULTS + this.playersNames.getLast());
+        this.labelGuessP1.setText(TEXT_LABEL_GUESS + this.playersNames.get(0));
+        this.labelGuessP2.setText(TEXT_LABEL_GUESS + this.playersNames.get(1));
+        this.labelResultP1.setText(TEXT_LABEL_RESULTS + this.playersNames.get(0));
+        this.labelResultP2.setText(TEXT_LABEL_RESULTS + this.playersNames.get(1));
     }
 
     @Override
     public void updateGuesses(String player, Position pos, SecretCodeColors guess) {
         for (int i = 0; i < this.playersNames.size(); i++) {
-            if (this.playersNames.get(i).equals(player)) {
-                Circle tmp = new Circle(RADIUS, COLORS_GUESS.get(guess));
-                this.gridPaneGuesses.get(i).add(tmp, pos.getX(), pos.getY() - 1);                
+            if (this.playersNames.get(i).equals(player)) {                
+                StackPane stack = this.createStackPaneWithCircle(COLORS_GUESS.get(guess));
+                this.gridPaneGuesses.get(i).add(stack, pos.getX(), pos.getY() - 1);                
             }
         }
     }
@@ -158,14 +158,19 @@ public class SecretCodeViewImpl extends AbstractSceneView implements SecretCodeV
         for (int i = 0; i < this.playersNames.size(); i++) {
             if (this.playersNames.get(i).equals(player)) {
                 for (int j = 0; j < results.size(); j++) {
-                    Circle tmp = new Circle(RADIUS, COLORS_RES.get(results.get(j)));
-                    StackPane stack = new StackPane();
-                    stack.setAlignment(Pos.CENTER);
-                    stack.getChildren().add(tmp);
+                    StackPane stack = this.createStackPaneWithCircle(COLORS_RES.get(results.get(j)));
                     this.gridPaneResults.get(i).add(stack, j, turn -1 );
                 }               
             }
         }
+    }
+
+    private StackPane createStackPaneWithCircle(Color colore) {
+        Circle c = new Circle(RADIUS, colore);
+        StackPane stackPane = new StackPane();
+        stackPane.setAlignment(Pos.CENTER);
+        stackPane.getChildren().add(c);
+        return stackPane;
     }
 
     @Override
